@@ -21,11 +21,5 @@
 
 namespace ppogl{
 
-Material::Material()
- : m_shininess(0.0),
-   m_transparency(0.0),
-   m_specularExponent(0.0)
-{
-}
-	
+
 } //namepsace ppogl
